--- a/PinPeng/.settings/org.eclipse.core.resources.prefs
+++ b/PinPeng/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Wed May 15 10:27:05 CST 2013
+#Wed May 15 22:46:26 CST 2013
 eclipse.preferences.version=1
-encoding//WebRoot/test.jsp=UTF-8
+encoding//WebRoot/WEB-INF/page/test.jsp=UTF-8
