--- a/PinPeng/.settings/org.eclipse.core.resources.prefs
+++ b/PinPeng/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Jun 05 19:47:55 CST 2013
+#Fri Jun 07 13:45:47 CST 2013
 eclipse.preferences.version=1
+encoding//WebRoot/WEB-INF/page/checkrequest.jsp=UTF-8
 encoding//WebRoot/WEB-INF/page/sendnoticesuccess.jsp=UTF-8
