--- a/PinPeng/WebRoot/WEB-INF/web.xml
+++ b/PinPeng/WebRoot/WEB-INF/web.xml
@@ -17,4 +17,15 @@
   <filter-mapping>
   	<filter-name>struts2</filter-name>
   	<url-pattern>/*</url-pattern>
-  </filter-mapping></web-app>
+  </filter-mapping>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>CheckCodeServlet</servlet-name>
+    <servlet-class>utils.CheckCodeServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>CheckCodeServlet</servlet-name>
+    <url-pattern>/servlet/CheckCodeServlet</url-pattern>
+  </servlet-mapping></web-app>
